<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="@mipmap/bg"
    >
    <com.android.jdrd.headcontrol.view.MyView
        android:layout_marginLeft="30dp"
        android:id="@+id/surfaceview"
        android:layout_width="1040dp"
        android:layout_height="640dp"
        android:layout_gravity="center"
        />
    <LinearLayout
        android:id="@+id/linearlayout_map"
        android:layout_width="wrap_content"
        android:orientation="vertical"
        android:layout_height="match_parent"
        >
        <Button
            style="@style/MapButton"
            android:id="@+id/button_pointchooce"
            android:text="@string/button_pointchooce"
            />
        <Button
            style="@style/MapButton"
            android:id="@+id/button_pathplan"
            android:text="@string/button_pathplan"
            />
        <Button
            style="@style/MapButton"
            android:id="@+id/button_cruise"
            android:text="@string/button_cruise"
            />
        <Button
            style="@style/MapButton"
            android:id="@+id/button_return"
            android:text="@string/button_return"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/relative_plan"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:visibility="gone"
        >
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MyTextView"
            android:text="@string/button_path"/>
        <Spinner
            android:id="@+id/spinner_plan"
            style="@style/MySpiner"
            />
        <Button
            style="@style/MapButton"
            android:id="@+id/button_execut"
            android:text="执行路线"
            />
        <Button
            android:id="@+id/button_plan_stop"
            android:text="@string/button_plan_back"
            style="@style/MapButton"
            />
        <Button
            android:id="@+id/button_plan"
            android:text="@string/button_plan"
            style="@style/MapButton"
            />
        <Button
            android:id="@+id/button_remove"
            android:text="@string/button_remove"
            style="@style/MapButton"
            />
        <Button
            android:id="@+id/button_plan_back"
            android:text="@string/back"
            style="@style/MapButton"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/relative_plan_info"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:visibility="gone"
        android:orientation="vertical">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MyTextView"
            android:text="@string/serchtime"/>
        <Spinner
            android:id="@+id/serchtime"
            style="@style/MySpiner"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MyTextView"
            android:text="@string/scope"/>
        <Spinner
            android:id="@+id/scope"
            style="@style/MySpiner"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MyTextView"
            android:text="@string/gametime"/>
        <Spinner
            android:id="@+id/gametime"
            style="@style/MySpiner"
            />
        <Button
            android:id="@+id/button_savenext"
            android:text="@string/savenext"
            style="@style/MapButton"
            />
        <Button
            android:id="@+id/button_clearlast"
            android:text="@string/button_clearlast"
            style="@style/MapButton"
            />
        <Button
            android:id="@+id/button_saveall"
            android:text="@string/button_saveall"
            style="@style/MapButton"
            />
        <Button
            android:id="@+id/button_clearall"
            android:text="@string/button_clearall"
            style="@style/MapButton"
            />
        <Button
            android:id="@+id/button_plan_info_back"
            android:text="@string/back"
            style="@style/MapButton"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearlayout_point"
        android:layout_width="200dp"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_height="match_parent">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/MyTextView"
            android:text="@string/button_point"/>
        <Button
            android:id="@+id/button_next"
            android:text="@string/savenext"
            style="@style/MapButton"
            />
        <EditText
            android:id="@+id/point_x"
            android:layout_width="match_parent"
            android:layout_height="100dp" />
        <EditText
            android:id="@+id/point_y"
            android:layout_width="match_parent"
            android:layout_height="100dp" />
        <Button
            android:id="@+id/button_move"
            android:text="@string/move"
            style="@style/MapButton"
            />
        <Button
            android:id="@+id/button_point_back"
            android:text="@string/back"
            style="@style/MapButton"
            />
    </LinearLayout>
    <LinearLayout
        android:id="@+id/linearlayout_roam"
        android:layout_width="200dp"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_height="match_parent">
        <Button
            android:id="@+id/button_roam_start"
            android:text="@string/roam_start"
            style="@style/MapButton"
            />
        <Button
            android:id="@+id/button_roam_stop"
            android:text="@string/roam_stop"
            style="@style/MapButton"
            />
        <Button
            android:id="@+id/button_roam_back"
            android:text="@string/back"
            style="@style/MapButton"
            />
    </LinearLayout>
</LinearLayout>
