<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="500dp"
    android:layout_height="300dp"
    android:layout_gravity="center"
    android:background="@mipmap/bg10"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/title"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_marginTop="30dp"
        android:gravity="center"
        android:text="@string/finishplan"
        android:textColor="#fffffb"
        android:textSize="20sp"
        android:visibility="visible" />

    <!--   <LinearLayout
          android:id="@+id/contentView"
          android:layout_width="fill_parent"
          android:layout_height="wrap_content" > -->

    <EditText
        android:id="@+id/number"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:hint="路线1" />
    <!-- </LinearLayout> -->


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_gravity="bottom"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/positiveButton"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:background="@drawable/btn_map_selector"
            android:text="@string/sure"
            android:gravity="center" />

        <Button
            android:id="@+id/negativeButton"
            android:layout_width="120dp"
            android:layout_height="60dp"
            android:background="@drawable/btn_map_selector"
            android:layout_marginLeft="40dp"
            android:text="@string/cancel"
            android:gravity="center" />
    </LinearLayout>

</LinearLayout>