<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:clickable="true"
        android:orientation="vertical"
        android:padding="20.0dip" >

        <LinearLayout
            android:layout_width="500dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            android:background="@mipmap/bg"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/title"
                style="@style/text_18_ffffff"
                android:layout_width="fill_parent"
                android:layout_height="40.0dip"
                android:gravity="center"
                android:text="@string/warn"
                android:visibility="visible" />

            <LinearLayout
                android:id="@+id/content"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="center" >

                <TextView
                    android:id="@+id/message"
                    style="@style/text_16_666666"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:lineSpacingMultiplier="1.5"
                    android:minHeight="120.0dip"
                    android:layout_gravity="center"
                    android:paddingBottom="15.0dip"
                    android:paddingLeft="20.0dip"
                    android:paddingRight="20.0dip"
                    android:paddingTop="15.0dip" />
            </LinearLayout>

            <View
                android:layout_width="fill_parent"
                android:layout_height="1.0px"
                android:background="#ffd0d0d0" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="100dp"
                android:layout_gravity="bottom"
                android:gravity="center"
                android:orientation="horizontal" >

                <Button
                    android:id="@+id/positiveButton"
                    style="@style/text_15_ffffff_sdw"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:background="@drawable/btn_save_background"
                    android:gravity="center"
                    android:text="@string/sure" />

                <Button
                    android:id="@+id/negativeButton"
                    style="@style/text_15_ffffff_sdw"
                    android:layout_width="120dp"
                    android:layout_height="40dp"
                    android:layout_marginLeft="40dp"
                    android:background="@drawable/btn_save_background"
                    android:gravity="center"
                    android:text="@string/cancel" />
            </LinearLayout>
        </LinearLayout>

    </FrameLayout>